--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 plugins {
-	id 'java'
+	id 'application'
+
 }
 
 group = 'com.zoolatech'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
 
+application {
+	mainClass = 'com.zoolatech.loganalyzer.LoganalyzerApplication2'
+}
 
 repositories {
 	mavenCentral()
