--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
 	id 'application'
-
 }
 
 group = 'com.zoolatech'
@@ -16,7 +15,12 @@ repositories {
 }
 
 dependencies {
+	implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.315')
+	implementation 'com.amazonaws:aws-java-sdk-s3'
 	implementation group: 'org.springframework', name: 'spring-context', version: '5.3.23'
+	runtimeOnly group: 'software.amazon.awssdk', name: 'bom', version: '2.16.60', ext: 'pom'
+	implementation group: 'software.amazon.awssdk', name: 's3', version: '2.17.285'
+
 }
 
 tasks.named('test') {
