--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'application'
+	id 'war'
 }
 
 group = 'com.zoolatech'
@@ -17,6 +18,15 @@ repositories {
 dependencies {
 	implementation group: 'org.springframework', name: 'spring-context', version: '5.3.23'
 	implementation group: 'software.amazon.awssdk', name: 's3', version: '2.17.285'
+	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+	implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.23'
+	implementation group: 'org.springframework', name: 'spring-core', version: '5.3.23'
+	implementation group: 'org.springframework', name: 'spring-expression', version: '5.3.23'
+	implementation group: 'org.springframework', name: 'spring-web', version: '5.3.23'
+	implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.23'
+	implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
+	implementation group: 'javax.servlet.jsp.jstl', name: 'javax.servlet.jsp.jstl-api', version: '1.2.2'
+	implementation group: 'org.glassfish.web', name: 'javax.servlet.jsp.jstl', version: '1.2.5'
 }
 
 run {
