--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 plugins {
+	id 'org.springframework.boot' version '2.7.4'
+	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
+	id 'java'
 	id 'application'
 }
 
@@ -17,9 +20,17 @@ repositories {
 dependencies {
 	implementation group: 'org.springframework', name: 'spring-context', version: '5.3.23'
 	implementation group: 'software.amazon.awssdk', name: 's3', version: '2.17.285'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.65'
+	implementation 'org.glassfish.web:javax.servlet.jsp.jstl:1.2.5'
+
 }
 
 run {
+	systemProperties = System.properties
+}
+
+bootRun {
 	systemProperties = System.properties
 }
 
