added injection via @Value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.main.allow-bean-definition-overriding=true
 logging.level.root=INFO
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+reader.type=file
+file.name=/log.txt
+find.me=error
+
 
