--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 application {
-	mainClass = 'com.zoolatech.loganalyzer.LoganalyzerApplication2'
+	mainClass = 'com.zoolatech.loganalyzer.LogAnalyzerApplication'
 }
 
 repositories {
@@ -21,11 +21,13 @@ dependencies {
 	implementation group: 'org.springframework', name: 'spring-context', version: '5.3.23'
 	implementation group: 'software.amazon.awssdk', name: 's3', version: '2.17.285'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
-
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.65'
 	implementation 'org.glassfish.web:javax.servlet.jsp.jstl:1.2.5'
-
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
+	testImplementation 'org.mockito:mockito-all:1.10.19'
+	testImplementation 'org.mockito:mockito-junit-jupiter:4.8.1'
 }
 
 run {
