--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,9 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
-	testImplementation 'org.mockito:mockito-all:1.10.19'
 	testImplementation 'org.mockito:mockito-junit-jupiter:4.8.1'
+	testImplementation 'org.springframework:spring-test:5.3.23'
+
 }
 
 run {
